adding few more changes